--- a/Rock_Paper_Scissors_Game.ipynb
+++ b/Rock_Paper_Scissors_Game.ipynb
@@ -212,7 +212,7 @@
     "    # loads RGB image as PIL.Image.Image type\n",
     "    img = image.load_img(img_path, target_size=(240, 240))\n",
     "    # convert PIL.Image.Image type to 3D tensor with shape (240, 240, 3)\n",
-    "    x = image.img_to_array(img)\n",
+    "    x = image.img_to_array(img)/255\n",
     "    # convert 3D tensor to 4D tensor with shape (1, 240, 240, 3) and return 4D tensor\n",
     "    return np.expand_dims(x, axis=0)\n",
     "\n",
@@ -313,8 +313,10 @@
     "# Building the model\n",
     "new_model = Sequential()\n",
     "new_model.add(Conv2D(filters=32, kernel_size=(3,3), input_shape=img_train.shape[1:], activation='relu'))\n",
+    "new_model.add(BatchNormalization())",
     "new_model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "new_model.add(Conv2D(filters=64, kernel_size=(3,3), activation='relu'))\n",
+    "new_model.add(BatchNormalization())",
     "new_model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "new_model.add(Conv2D(filters=128, kernel_size=(3,3), activation='relu'))\n",
     "new_model.add(GlobalAveragePooling2D())\n",
@@ -335,7 +337,9 @@
     "checkpointer = ModelCheckpoint(filepath=top_model_weights_path, \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
-    "early_stopping_monitor = EarlyStopping(patience=15)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, verbose=1, min_delta=0.0001),
+    "\n",
+    "early_stopping_monitor = EarlyStopping(patience=5)\n",
     "\n",
     "\n",
     "# Training the model\n",
@@ -343,7 +347,7 @@
     "              epochs=epochs,\n",
     "              batch_size=batch_size,\n",
     "              validation_data=(img_valid, y_validation),\n",
-    "              callbacks=[checkpointer, early_stopping_monitor])\n"
+    "              callbacks=[checkpointer, early_stopping_monitor, reduce_lr])\n"
    ]
   },
   {
@@ -447,6 +451,7 @@
     "def preprocess_img(frame):\n",
     "    img_model = cv2.resize(frame, (240,240))\n",
     "    img_model = cv2.cvtColor(img_model, cv2.COLOR_GRAY2RGB)\n",
+    "    img_model = img_model/255\n",
     "    img_model = np.expand_dims(img_model, axis=0)\n",
     "    \n",
     "    return img_model\n"
